--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,11 +26,9 @@ services:
       dockerfile: ./src/db/Dockerfile
     env_file: .env
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
-      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+      - ${POSTGRES_PORT}:5432
     volumes:
       - pgdb:/var/lib/postgresql/data
       - pglog:/var/log/postgresql/postgresql.log
