--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --config ./test/jest-e2e.json"
+    "test": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migrations": "npm run typeorm migration:generate -- -d src/ormconfig.ts src/migrations/auto",
+    "migrations:run": "npm run typeorm migration:run -- -d src/ormconfig.ts",
+    "migrations:revert": "npm run typeorm migration:revert -- -d src/ormconfig.ts"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.7",
@@ -62,7 +66,7 @@
     "supertest": "^6.2.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
