--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^9.0.7",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.1.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.7",
     "@nestjs/swagger": "^6.0.3",
     "@nestjs/typeorm": "^9.0.0",
@@ -35,6 +36,8 @@
     "dotenv": "^16.0.1",
     "http-status-codes": "^2.2.0",
     "npm": "^8.15.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -52,6 +55,7 @@
     "@types/jest": "27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.7",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
