--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=4000
 
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
+POSTGRES_USER=user
 POSTGRES_PASSWORD=task4
 POSTGRES_HOST=postgres
 POSTGRES_DB=postgres
@@ -9,5 +9,3 @@ POSTGRES_DB=postgres
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
-TOKEN_EXPIRE_TIME=1h
-TOKEN_REFRESH_EXPIRE_TIME=24h
