feat: change env for database

--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ PORT=4000
 
 POSTGRES_PORT=5432
 POSTGRES_USER=user
-POSTGRES_PASSWORD=task4
-POSTGRES_HOST=postgres
-POSTGRES_DB=postgres
+POSTGRES_PASSWORD=qrv6Beit8F75OUUvFob0oXVqJDLQTuM6
+POSTGRES_HOST=dpg-ce0h089a6gdsa61f71qg-a
+POSTGRES_DB=task_6ix9
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
